[gd_scene load_steps=5 format=2]

[ext_resource path="res://light_theme.tres" type="Theme" id=1]
[ext_resource path="res://script/title screen/Title Screen.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Minecraft.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Title Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 11.0
margin_right = 80.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../Quit")
text = "Single Player"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 52.0
text = "Multiplayer"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 160.0
margin_bottom = 80.0
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 160.0
margin_bottom = 108.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 160.0
margin_bottom = 136.0
focus_neighbour_bottom = NodePath("../Singleplayer")
text = "Quit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -59.0
margin_right = 157.0
margin_bottom = -15.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 8
text = "BOAT BATTLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
